# lunar_mining

./: CMakeLists.txt  README.md  config.cpp  config.h  log.csv  main.cpp  mining.cfg  mining_controller.cpp  mining_controller.h  service_include.h  truck.cpp  truck.h  unload_station.cpp  unload_station.h  unload_station_scheduler.cpp  unload_station_scheduler.h
Presentation/Mining_Control_Service_Diagrams/: Lunar_Mining.drawio
